# nvmath-python

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .talismanrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.rst  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_request.yml  feature_request.yml
.github/workflows/: build-docs.yml  build-wheel.yml  ci.yml  coverage.yml  pr-metadata-check.yml  release-upload.yml  release.yml  restricted-paths-guard.yml  test-sdist-linux.yml  test-sdist-windows.yml  test-wheel-linux.yml  test-wheel-windows.yml
builder/: __init__.py  pep517.py  utils.py
ci/: .ci-pipeline-regen.md
ci/tools/: env-vars  guess_latest.sh  run-tests  setup-sanitizer  validate-release-wheels
docs/: Makefile  build_docs.sh
docs/sphinx/: README.md  api_design.rst  conf.py  getting-started.rst  host-utils.rst  index.rst  installation.rst  license.rst  overview.rst  quickstart.rst  release-notes.rst  stateful_apis_guide.rst  stream_semantics.rst  versions.json
examples/device/: common.py  common_cupy.py  common_numba.py  cublasdx_batched_gemm_fp64.py  cublasdx_blockdim_gemm_fp16.py  cublasdx_device_gemm_performance.py  cublasdx_device_gemm_performance_pipeline.py  cublasdx_fp64_emulation.py  cublasdx_fused_gemm_performance.py  cublasdx_gemm_fft.py  cublasdx_gemm_fft_fp16.py  cublasdx_gemm_fft_performance.py  cublasdx_gemm_fusion.py  cublasdx_simple_gemm_accumulator_fp32.py  cublasdx_simple_gemm_arrangement.py  cublasdx_simple_gemm_cfp16.py  cublasdx_simple_gemm_fp32.py  cublasdx_simple_gemm_leading_dimensions.py  cublasdx_simple_gemm_make_tensor_like.py  cublasdx_simple_gemm_mixed_precision.py  cublasdx_simple_gemm_pipeline_api.py  cublasdx_simple_gemm_pipeline_api_3d.py  cublasdx_simple_gemm_tensor_fp32.py  cublasdx_simple_gemm_transpose_mode.py  cublasdx_simple_partition.py  cublasdx_single_gemm_performance.py  cublasdx_single_gemm_tensor_performance.py  cufftdx_autotuning.py  cufftdx_block_fft.py  cufftdx_block_fft_performance.py  cufftdx_block_fft_performance_many.py  cufftdx_convolution.py  cufftdx_convolution_performance.py  cufftdx_convolution_r2c_c2r.py  cufftdx_convolution_r2c_c2r_packed_fold_optimized.py  cufftdx_convolution_signal.py  cufftdx_fft_2d.py  cufftdx_fft_2d_r2c_c2r.py  cufftdx_fft_2d_single_kernel.py  cufftdx_fft_3d_box_single_block.py  (+27 more)
examples/fft/: caching.py  common.py  example01_cupy.py  example01_cupy_layouts.py  example01_numpy.py  example01_numpy_cpu_execution.py  example01_torch_complex32.py  example02_stateful_cupy.py  example02_stateful_torch.py  example02_stateful_torch_cpu.py  example02_stateful_torch_cpu_execution.py  example03_options.py  example03_options_cpu_execution.py  example04_logging_global.py  example04_logging_user.py  example05_stateful_inplace.py  example05_stateful_reset.py  example06_r2c.py  example07_c2r.py  example07_c2r_odd.py  example08_cupy_inplace.py  example08_numpy_inplace.py  example08_numpy_inplace_cpu_execution.py  example09_streams.py  example10_memory_allocator.py  example11_resource_mgmt.py  example12_stateful_unsupported_fallback.py  example12_unsupported_fallback.py  example13_cupy_mt_mgpu.py  example13_numpy_mp_mgpu.py  example14_caching.py  example15_cupy_nd_fft_benchmark.py  example16_cupy_nd_fft_benchmark.py  example17_trunc.py  example18_5D_trunc.py  example19_convolution_epilog_callback.py  example19_convolution_memory_layout_callback.py  example19_convolution_prolog_callback.py  fftn1.py  fftn2.py  (+1 more)
notebooks/matmul/: 01_introduction.ipynb  02_epilogs.ipynb  03_backpropagation.ipynb  04_fp8.ipynb
nvmath/: __init__.py  _utils.py  _version.py  memory.py
nvmath/_internal/: attribute_ifc_factory.py  enum_utils.py  formatters.py  layout.py  mem_limit.py  package_ifc.py  package_ifc_cupy.py  package_ifc_torch.py  package_wrapper.py  templates.py  tensor_ifc.py  tensor_ifc_cupy.py  tensor_ifc_numpy.py  tensor_ifc_torch.py  tensor_wrapper.py  typemaps.py  utils.py
nvmath/bindings/: __init__.py  cublas.pxd  cublas.pyi  cublas.pyx  cublasLt.pxd  cublasLt.pyi  cublasLt.pyx  cublasMp.pxd  cublasMp.pyi  cublasMp.pyx  cudss.pxd  cudss.pyi  cudss.pyx  cufft.pxd  cufft.pyi  cufft.pyx  cufftMp.pxd  cufftMp.pyi  cufftMp.pyx  curand.pxd  curand.pyi  curand.pyx  cusolver.pxd  cusolver.pyi  cusolver.pyx  cusolverDn.pxd  cusolverDn.pyi  cusolverDn.pyx  cusparse.pxd  cusparse.pyi  cusparse.pyx  cusparseLt.pxd  cusparseLt.pyi  cusparseLt.pyx  cutensor.pxd  cutensor.pyi  cutensor.pyx  cycublas.pxd  cycublas.pyx  cycublasLt.pxd  (+35 more)
nvmath/device/: __init__.py  _deprecated.py  caching.py  common.py  common_backend.py  common_cpp.py  common_cuda.py  common_mathdx.py  common_numba.py  common_opaque_tensor.py  cublasdx.py  cublasdx_backend.py  cublasdx_numba.py  cufftdx.py  cufftdx_backend.py  cufftdx_db.py  cufftdx_numba.py  cufftdx_workspace.py  curand_kernel.py  cusolverdx.py  cusolverdx_backend.py  cusolverdx_numba.py  llvm_array.py  nvrtc.py  patch.py  random.py  random_helpers.py  random_states.py  types.py  vector_types_numba.py
nvmath/distributed/: __init__.py  _utils.py  distribution.py  process_group.py
nvmath/fft/: __init__.py  _configuration.py  _exec_utils.py  _helpers.py  configuration.py  fft.py
nvmath/internal/: __init__.pxd  __init__.py  _bindings.pxd  _bindings.pyx  _device_utils.py  bindings.pxd  bindings.pyx  enum_utils.py  formatters.py  mem_limit.py  memory.pxd  memory.pyi  memory.pyx  package_ifc.py  package_ifc_cuda.py  package_ifc_cupy.py  package_ifc_torch.py  package_wrapper.py  tensor_ifc.py  tensor_ifc_cupy.py  tensor_ifc_ndbuffer.py  tensor_ifc_numpy.py  tensor_ifc_torch.py  tensor_wrapper.py  typemaps.py  utils.py
nvmath/linalg/: __init__.py
nvmath/sparse/: __init__.py
nvmath/tensor/: __init__.py  _configuration.py  (+1 more)
requirements/: README.md  pip-dev-cu11-torch.txt  pip-dev-cu11.txt  pip-dev-cu12-dx-torch.txt  pip-dev-cu12-dx.txt  pip-dev-sysctk11.txt  pip-dev-sysctk12-dx.txt
tests/: conftest.py
(+659 files in other folders)
