# Copyright (c) 2024-2026, NVIDIA CORPORATION & AFFILIATES. ALL RIGHTS RESERVED.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
    # < 3.2.0: https://github.com/cython/cython/issues/7122
    "Cython>=3.2.0",
    "setuptools>=77.0.3",
    "tomli>=2.0.1; python_version < '3.11'",
    # whatever version works here, see builder/utils.py for detail
    "cuda-toolkit[cudart,nvcc] >=13.1,<14",
    # needed for internal/bindings
    "cuda-bindings >=13.1,<14",
    # needed for internal/bindings (cuda.bindings.cydriver)
    "nvidia-cuda-profiler-api",
]
build-backend = "setuptools.build_meta"


[project]
name = "nvmath-python"
version = "0.8.0"
dynamic = [
    "readme",
]
requires-python = '>=3.10,<3.14'
description = "NVIDIA Math Python libraries"
authors = [
    { name = "NVIDIA Corporation" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "cuda-bindings",
    "cuda-core >=0.3.2,<1",
    "cuda-pathfinder>=1.3.2,<2.0",
    "numpy >=1.25,<3",
    "pywin32; platform_system=='Windows'"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
]

[tool.setuptools]
py-modules = ["builder"]
include-package-data = false

[tool.setuptools.cmdclass]
build_ext = "builder.utils.build_ext"

[tool.setuptools.packages.find]
include = ["nvmath", "nvmath.*"]

[tool.setuptools.package-data]
'*' = ["*.pxd", "copy_kernel/*.h", "copy_kernel_impl/*.h"]

[tool.setuptools.dynamic]
readme = { file = ["DESCRIPTION.rst"], content-type = "text/x-rst" }

[project.optional-dependencies]
cpu = [
    "mkl; platform_machine=='x86_64'",
    "nvpl-fft >=0.3,<1; platform_system=='Linux' and platform_machine=='aarch64'",
    "nvpl-blas >=0.3,<1; platform_system=='Linux' and platform_machine=='aarch64'",
]
sysctk12 = [
    "cuda-bindings >=12.9.2,<13",
    "cutensor-cu12 >=2.3.1",
]
sysctk13 = [
    "cuda-bindings >=13.0.1,<14",
    "cutensor-cu13 >=2.3.1",
]
cu12 = [
    "nvmath-python[sysctk12]",
    "cuda-core[cu12]",
    "nvidia-cublas-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudss-cu12 == 0.7.*",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "cutensor-cu12 >=2.3.1",
]
cu13 = [
    "nvmath-python[sysctk13]",
    "cuda-core[cu13]",
    "cuda-toolkit[cublas,nvrtc,cudart,cufft,curand,cusolver,cusparse]==13.*",
    "nvidia-cudss-cu13 == 0.7.*",
    "cutensor-cu13 >=2.3.1",
]
dx = [
    # numba-cuda defines version restriction
    "numba",
    "numba-cuda >= 0.24.0",
]
sysctk12-dx = [
    "nvmath-python[sysctk12]",
    "nvmath-python[dx]",
]
cu12-dx = [
    "nvmath-python[cu12]",
    "nvmath-python[dx]",
    "nvidia-libmathdx-cu12 >=0.3.1,<0.4.0",
    # Extra restrictions:
    # Earlier versions have missing header files
    "nvidia-cuda-cccl-cu12 > 12.4.127",
    # For nvmath.device use of NVRTC. [Known bugs exist for 12.4.0, 12.4.1,
    #  12.5.0]
    "nvidia-cuda-nvrtc-cu12 !=12.4.*, !=12.5.0",
]
sysctk12-distributed = [
    "nvmath-python[sysctk12]",
    "mpi4py",
    "nvidia-nccl-cu12 >= 2.24.3",
]
cu12-distributed = [
    "nvmath-python[cu12]",
    "nvmath-python[sysctk12-distributed]",
    "nvidia-cublasmp-cu12 >= 0.6.0",
    "nvidia-cufftmp-cu12",
    "nvidia-nvshmem-cu12 >= 3.2.5",
]
sysctk13-dx = [
    "nvmath-python[sysctk13]",
    "nvmath-python[dx]",
]
cu13-dx = [
    "nvmath-python[cu13]",
    "nvmath-python[dx]",
    "nvidia-libmathdx-cu13 >=0.3.1,<0.4.0",
    "cuda-toolkit[cccl,nvrtc]==13.*",
]
cu131-dx = [
    "nvmath-python[cu13-dx]",
    "cuda-toolkit[cccl,nvrtc]==13.1.*",
]
sysctk13-distributed = [
    "nvmath-python[sysctk13]",
    "mpi4py",
    "nvidia-nccl-cu13 >= 2.24.3",
]
cu13-distributed = [
    "nvmath-python[cu13]",
    "nvmath-python[sysctk13-distributed]",
    "nvidia-cublasmp-cu13 >= 0.6.0",
    # TODO: add cufftmp ctk13 when available
    "nvidia-cufftmp-cu13 >= 12.1.3.2",
    "nvidia-nvshmem-cu13 >= 3.2.5",
]


[dependency-groups]
cupy-oldest-cu12 = [
    "cupy-cuda12x ==12.1.*",
    "numpy ==1.25.*",
]
dev = [
    { include-group = 'tests-cu12' },
    { include-group = 'lint' },
]
lint = [
  "ruff",
  "pre-commit",
]
docs = [
    "breathe",
    "enum-tools",
    "grip",
    "jupyter",
    "mpi4py",
    "myst-parser",
    "nbconvert <7.5",  # to enable pandoc CLI < 2.14.2
    "nbsphinx",
    "nbsphinx-link",
    "nvidia-sphinx-theme",
    "pandoc",
    "sphinx",
    "sphinx-favicon",
    "sphinx-toolbox",
    "sphinxcontrib-programoutput",
]
build-wheel = [
    "auditwheel",
    "build",
    "pyproject-validate",
    "twine",
    "wheel",
]
mpich = [
    "mpich",
]
notebooks-cu126 = [
    "jupyter",
    "matplotlib",
    "nbconvert",
    "torchvision",
]
openmpi = [
    "openmpi",
]
cupy-cu12 = [
    "cupy-cuda12x >= 12.1",
]
cupy-cu13 = [
    "cupy-cuda13x",
]
tests-no-cupy = [
    "cffi",
    "hypothesis",
    "opt_einsum",
    "packaging",
    "psutil",
    "pytest",
    "pytest-repeat",
    "pytest-xdist",
    "scipy",
]
tests-cu12 = [
    { include-group = 'tests-no-cupy' },
    { include-group = 'cupy-cu12' },
]
tests-cu13 = [
    { include-group = 'tests-no-cupy' },
    { include-group = 'cupy-cu13' },
]
tests-dx = [
    "nvidia-mathdx ~= 25.6.0",
]
tests-dx-sysctk12 = [
    { include-group = 'tests-cu12' },
    { include-group = 'tests-dx' },
]
tests-dx-cu12 = [
    { include-group = 'tests-dx-sysctk12' },
]
tests-dx-sysctk13 = [
    { include-group = 'tests-cu13' },
    { include-group = 'tests-dx' },
]
tests-dx-cu13 = [
    { include-group = 'tests-dx-sysctk13' },
]
tests-dx-dev-cu12 = [
    { include-group = 'tests-cu12' },
    { include-group = 'tests-dx' },
    "nvidia-libmathdx-cu12 >= 0.3.1.dev0",
]
tests-dx-dev-cu13 = [
    { include-group = 'tests-cu13' },
    { include-group = 'tests-dx' },
    "nvidia-libmathdx-cu13 >= 0.3.1.dev0"
]
torch-cu121 = [
    "torch ==2.1.*"
]
torch-cu126 = [
    # torch 2.6 is missing a dependency on cudnn?
    "nvidia-cudnn-cu12",
    "nvidia-cusparselt-cu12",
    # torch wheels pin nvjitlink but not related compiler packages.
    # However, if packages do not match then lto_callback tests will fail.
    # torch wheels depend on nvidia wheels; do not add if testing system ctk
    "nvidia-cuda-cccl-cu12 ==12.6.*",
    "nvidia-cuda-nvcc-cu12 ==12.6.*",
    "nvidia-cuda-nvrtc-cu12 ==12.6.*",
    "nvidia-cuda-runtime-cu12 ==12.6.*",
    "nvidia-nvjitlink-cu12 ==12.6.*",
    "torch >=2.9; platform_system!='Windows'"
]
torch-cu128 = [
    # torch wheels pin nvjitlink but not related compiler packages.
    # However, if packages do not match then lto_callback tests will fail.
    # torch wheels depend on nvidia wheels; do not add if testing system ctk
    "cuda-toolkit[cccl,nvcc,nvrtc,cudart,nvjitlink]==12.8.*",
    "torch >=2.9; platform_system!='Windows'"
]
torch-cu129 = [
    # torch wheels pin nvjitlink but not related compiler packages.
    # However, if packages do not match then lto_callback tests will fail.
    # torch wheels depend on nvidia wheels; do not add if testing system ctk
    "cuda-toolkit[cccl,nvcc,nvrtc,cudart,nvjitlink]==12.9.*",
    "torch >=2.9; platform_system!='Windows'",
    "pytorch_triton >=3.4.0; platform_system!='Windows'",
]
torch-cu130 = [
    # torch wheels pin nvjitlink but not related compiler packages.
    # However, if packages do not match then lto_callback tests will fail.
    # torch wheels depend on nvidia wheels; do not add if testing system ctk
    "cuda-toolkit[cccl,nvcc,nvrtc,cudart,nvjitlink]==13.0.*",
    "torch >=2.9; platform_system!='Windows'",
]
torch-cu130-nightly = [
    # torch wheels pin nvjitlink but not related compiler packages.
    # However, if packages do not match then lto_callback tests will fail.
    # torch wheels depend on nvidia wheels; do not add if testing system ctk
    "cuda-toolkit[cccl,nvcc,nvrtc,cudart,nvjitlink]==13.0.*",
    "torch >=2.11.0.dev20260101; platform_system!='Windows'",
    "pytorch_triton; platform_system!='Windows'",
    "triton; platform_system!='Windows'",
]

[[tool.setuptools.ext-modules]]
name="nvmath.bindings._internal.utils"
sources=["nvmath/bindings/_internal/utils.pyx"]
language="c++"

[tool.nvmath-bindings]
modules = [
    "nvmath.bindings.cublas",
    "nvmath.bindings.cublasLt",
    "nvmath.bindings.cudss",
    "nvmath.bindings.cufft",
    "nvmath.bindings.curand",
    "nvmath.bindings.cusolver",
    "nvmath.bindings.cusolverDn",
    "nvmath.bindings.cusparse",
    "nvmath.bindings.cutensor",
    "nvmath.bindings.mathdx",
    "nvmath.bindings.nvpl.blas",
    "nvmath.bindings.nvpl.fft",
]
linux_modules = [
    "nvmath.bindings.cublasMp",
    "nvmath.bindings.cufftMp",
    "nvmath.bindings.nccl",
    "nvmath.bindings.nvshmem",
]
internal_modules = [
    "nvmath.internal.bindings",
    "nvmath.internal.memory",
    "nvmath.internal.ndbuffer.copy_kernel",
    "nvmath.internal.ndbuffer.data_layout",
    "nvmath.internal.ndbuffer.jit",
    "nvmath.internal.ndbuffer.ndbuffer",
    "nvmath.internal.ndbuffer.package_utils",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", group='torch-cu121' },
  { index = "pytorch-cu126", group='torch-cu126' },
  { index = "pytorch-cu128", group='torch-cu128' },
  { index = "pytorch-cu129", group='torch-cu129' },
  { index = "pytorch-cu130", group='torch-cu130' },
  { index = "pytorch-cu130-nightly", group='torch-cu130-nightly' },
]
pytorch_triton = [
  { index = "pytorch-cu129", group='torch-cu129' },
  { index = "pytorch-cu130-nightly", group='torch-cu130-nightly' },
]
triton = [
  { index = "pytorch-cu130-nightly", group='torch-cu130-nightly' },
]
torchvision = [
  { index = "pytorch-cu126", group='notebooks-cu126' },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true

[tool.ruff]
line-length = 128
# Don't format autogenerated files
exclude = [
    "nvmath/device/curand_kernel.py",
    "nvmath/bindings",
    "nvmath/internal/memory.pyi",
    "nvmath/internal/ndbuffer/*.pyi",
]
# Check against minimal supported version Python 3.10
target-version = "py310"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pycodestyle]
max-doc-length = 92
max-line-length = 128

[tool.ruff.lint]
select = [
    # pycodestyle Error
    "E",
    # Pyflakes
    "F",
    # pycodestyle Warning
    "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    "SLOT",
    "PLE",
]
ignore = [
    # FIXME
    # This list of ignored rules should be reduced. Many will be handled
    # automatically when enabling ruff-format.
    "B007",
    "B017",
    "B023",
    "B028",
    "B904",
    "I001",
    "SIM105",
    "SIM108",
    # Ignore multiple-statements-on-one-line-colon
    "E701",
    # Ignore multiple-statements-on-one-line-semicolon
    "E702",
    # Ignore bare-except
    "E722",
    # Ignore lambda-assignment
    "E731",
    # Ignore ambiguous-variable-name
    "E741",
]
fixable = ["ALL"]

[tool.codespell]
ignore-words-list = "FO,inout,matA,matB,matC,unix,braket,ND,halfs,coo"
write-changes = ""
# base64 workaround
# https://github.com/codespell-project/codespell/issues/2801
ignore-regex = '[A-Za-z0-9+/]{100,}'
exclude = [
    "nvmath/device/curand_kernel.py",
]
skip = "nvmath/bindings/*"

[tool.mypy]
python_version = "3.10"
disable_error_code = "import-untyped"
explicit_package_bases = true

# Don't check autogenerated files
[[tool.mypy.overrides]]
module = "nvmath.bindings.*"
ignore_errors = true

# This is cythonized module with stubgen generated stub
[[tool.mypy.overrides]]
module = "nvmath.internal.memory"
ignore_errors = true

# This is cythonized module with stubgen generated stub
[[tool.mypy.overrides]]
module = "nvmath.internal.ndbuffer.*"
ignore_errors = true

# TODO: add support
[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "internal.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

# FIXME: Stop ignoring mpi4py when wheel is published
[[tool.mypy.overrides]]
module = ["mpi4py.*"]
ignore_missing_imports = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "nvmath.device.cublasdx_backend.TransposeMode",
]
